# CoverMIP

./: .clang-format  .gitignore  CMakeLists.txt  Flags.cmake  SolverGurobi.cmake  Tests.cmake  build.sh  example.cpp
examples/: CMakeLists.txt
src/: CMakeLists.txt  cover_constants.cpp  cover_constants.h  example.cpp
